# service/internal/ent/schema/user.go
@@ -1,6 +1,9 @@
 package schema
 
-import "entgo.io/ent"
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/schema/field"
+)
 
 // User holds the schema definition for the User entity.
 type User struct {
@@ -9,7 +12,15 @@ type User struct {
 
 // Fields of the User.
 func (User) Fields() []ent.Field {
-	return nil
+	return []ent.Field{
+		field.Int32("id"),
+		field.String("username"),
+		field.String("phone"),
+		field.Strings("carPictures"),
+		field.String("openid"),
+		field.String("gender"),
+		field.String("description"),
+	}
 }
 
 // Edges of the User.
